WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207023
Unmatched ] or } brackets should be syntax errors in Unicode patterns only
https://bugs.webkit.org/show_bug.cgi?id=207023
Summary
Unmatched ] or } brackets should be syntax errors in Unicode patterns only
Alexey Shvayka
Reported
2020-01-30 17:18:28 PST
Test case: /]/u Expected: SyntaxError thrown Actual: RegExp instance ECMA262:
https://tc39.es/ecma262/#prod-annexB-Term
(/u flag precludes the use of ExtendedPatternCharacter) Term[U, N] :: [~U] ExtendedAtom[?N] ExtendedAtom[N] :: ExtendedPatternCharacter ExtendedPatternCharacter :: SourceCharacter but not one of ^ $ \ . * + ? ( ) [ | Test262:
https://test262.report/browse/built-ins/RegExp/unicode_restricted_brackets.js
Attachments
Patch
(8.09 KB, patch)
2020-01-30 17:24 PST
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-01-30 17:24:33 PST
Created
attachment 389309
[details]
Patch
WebKit Commit Bot
Comment 2
2020-01-31 09:58:53 PST
The commit-queue encountered the following flaky tests while processing
attachment 389309
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3
2020-01-31 09:59:32 PST
Comment on
attachment 389309
[details]
Patch Clearing flags on attachment: 389309 Committed
r255505
: <
https://trac.webkit.org/changeset/255505
>
WebKit Commit Bot
Comment 4
2020-01-31 09:59:34 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2020-01-31 10:00:19 PST
<
rdar://problem/59065180
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug